<resources>
    <string name="app_name">HotCue</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_jogos">Jogos</string>
    <string name="menu_outros">Outros</string>
    <string name="menu_musicas">Musicas</string>
    <string name="menu_votes">Votes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filmes">Filmes</string>
    <string name="menu_criar_votacao">CriarVotacao</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>