<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_votes"
            android:icon="@drawable/baseline_create_24"
            android:title="@string/menu_votes"/>
        <item
            android:id="@+id/nav_filmes"
            android:icon="@drawable/baseline_create_24"
            android:title="@string/menu_filmes"/>

        <item
            android:id="@+id/nav_jogos"
            android:icon="@drawable/baseline_create_24"
            android:title="@string/menu_jogos"/>

        <item
            android:id="@+id/nav_musicas"
            android:icon="@drawable/baseline_create_24"
            android:title="@string/menu_musicas"/>
        <item
            android:id="@+id/nav_outros"
            android:icon="@drawable/baseline_create_24"
            android:title="@string/menu_outros"/>
        <item
            android:id="@+id/nav_criar_votacao"
            android:icon="@drawable/baseline_arrow_circle_up_24"
            android:title="@string/menu_criar_votacao"/>
    </group>
</menu>