<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotcue.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.hotcue.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_votes"
        android:name="com.example.hotcue.ui.votes.VotesFragment"
        android:label="@string/menu_votes"
        tools:layout="@layout/fragment_votesfilme" />

    <fragment
        android:id="@+id/nav_filmes"
        android:name="com.example.hotcue.ui.filmes.FilmesFragment"
        android:label="@string/menu_filmes"
        tools:layout="@layout/fragment_filmes" />

    <fragment
        android:id="@+id/nav_jogos"
        android:name="com.example.hotcue.ui.jogos.JogosFragment"
        android:label="@string/menu_jogos"
        tools:layout="@layout/fragment_jogos" />

    <fragment
        android:id="@+id/nav_musicas"
        android:name="com.example.hotcue.ui.musicas.MusicasFragment"
        android:label="@string/menu_musicas"
        tools:layout="@layout/fragment_musicas" />

    <fragment
        android:id="@+id/nav_outros"
        android:name="com.example.hotcue.ui.outros.OutrosFragment"
        android:label="@string/menu_outros"
        tools:layout="@layout/fragment_outros" />

    <fragment
        android:id="@+id/nav_criar_votacao"
        android:name="com.example.hotcue.ui.criarVotacao.CriarVotacaoFragment"
        android:label="@string/menu_criar_votacao"
        tools:layout="@layout/fragment_criar_votacao" />
</navigation>